regustration and login feuture is done with backend

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,6 @@ JWT_SECRET="98540ff20bb5cb2348f09fdde5b0aa7ba3dee97e"
 Port=8000
 MONGO_URL="mongodb+srv://malikbaistawanzada:1234567890@cluster0.eokj4.mongodb.net/tiktok"
 DOTENV_CONFIG_SILENT=true
+CLOUDINARY_URL="cloudinary://178417168527824:6ml7ZhnMeukuch-PYrhClQh9uHY@djhao3ufj"
+API_SECRET="6ml7ZhnMeukuch-PYrhClQh9uHY"
+CLIENT_URL="http://localhost:5173"
